--- a/FE/html/index.html
+++ b/FE/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/index-styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -16,98 +16,61 @@
   <body>
     <div class="content-wrapper">
       <header>
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col">
-              <nav class="navbar navbar-expand-lg bg-body-secondary">
-                <div class="container-fluid">
-                  <a class="navbar-brand" href="#">
-                    <img
-                      src="..\images\school.png"
-                      alt="Logo"
-                      width="30"
-                      height="30"
-                      class="d-inline-block align-text-top"
-                    />
-                    TestingEz</a
-                  >
-                  <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation"
-                  >
-                    <span class="navbar-toggler-icon"></span>
+        <nav class="navbar navbar-expand-lg bg-body-secondary fixed-top">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+              <img
+                src="..\images\school.png"
+                alt="Logo"
+                width="30"
+                height="30"
+                class="d-inline-block align-text-top"
+              />
+              TestingEz</a
+            >
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link-1</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link-2</a>
+                </li>
+                <li class="nav-item">
+                  <button type="button" class="btn btn-secondary">
+                    Sing In
                   </button>
-                  <div
-                    class="collapse navbar-collapse"
-                    id="navbarSupportedContent"
-                  >
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#"
-                          >Home</a
-                        >
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                      </li>
-                      <li class="nav-item dropdown">
-                        <a
-                          class="nav-link dropdown-toggle"
-                          href="#"
-                          role="button"
-                          data-bs-toggle="dropdown"
-                          aria-expanded="false"
-                        >
-                          Dropdown
-                        </a>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="#">Action</a></li>
-                          <li>
-                            <a class="dropdown-item" href="#">Another action</a>
-                          </li>
-                          <li><hr class="dropdown-divider" /></li>
-                          <li>
-                            <a class="dropdown-item" href="#"
-                              >Something else here</a
-                            >
-                          </li>
-                        </ul>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link disabled" aria-disabled="true"
-                          >Disabled</a
-                        >
-                      </li>
-                    </ul>
-                    <form class="d-flex" role="search">
-                      <input
-                        class="form-control me-2"
-                        type="search"
-                        placeholder="Search"
-                        aria-label="Search"
-                      />
-                      <button class="btn btn-outline-success" type="submit">
-                        Search
-                      </button>
-                    </form>
-                  </div>
-                </div>
-              </nav>
+                </li>
+                <li class="nav-item">
+                  <button type="button" class="btn btn-secondary">
+                    Sing Up
+                  </button>
+                </li>
+              </ul>
             </div>
           </div>
-        </div>
+        </nav>
       </header>
 
       <main></main>
 
       <footer>
         <div class="container-fluid">
-          <footer class="bg-body-secondary py-3 my-4">
+          <footer class="bg-body-secondary">
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
               <li class="nav-item">
                 <a href="#" class="nav-link px-2 text-muted">Home</a>
