--- a/FE/html/index.html
+++ b/FE/html/index.html
@@ -50,17 +50,13 @@
                 <li class="nav-item">
                   <a class="nav-link" href="#">Link-2</a>
                 </li>
-                <li class="nav-item">
-                  <button type="button" class="btn btn-secondary">
-                    Sing In
-                  </button>
-                </li>
-                <li class="nav-item">
-                  <button type="button" class="btn btn-secondary">
-                    Sing Up
-                  </button>
-                </li>
               </ul>
+              <div class="d-flex">
+                <button type="button" class="btn btn-secondary me-2">
+                  Sign In
+                </button>
+                <button type="button" class="btn btn-secondary">Sign Up</button>
+              </div>
             </div>
           </div>
         </nav>
