index-page redesigned

--- a/FE/html/index.html
+++ b/FE/html/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>TestingEz</title>
     <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/index-styles.css" />
     <link
@@ -16,8 +16,8 @@
   <body>
     <div class="content-wrapper">
       <header>
-        <nav class="navbar navbar-expand-lg bg-body-secondary fixed-top">
-          <div class="container-fluid">
+        <nav class="navbar bg-body-secondary">
+          <div class="container-fluid justify-content-center">
             <a class="navbar-brand" href="#">
               <img
                 src="..\images\school.png"
@@ -28,41 +28,22 @@
               />
               TestingEz</a
             >
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link active" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Link-1</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Link-2</a>
-                </li>
-              </ul>
-              <div class="d-flex">
-                <button type="button" class="btn btn-secondary me-2">
-                  Sign In
-                </button>
-                <button type="button" class="btn btn-secondary">Sign Up</button>
-              </div>
-            </div>
           </div>
         </nav>
       </header>
 
-      <main></main>
+      <main>
+        <div class="main-wrapper">
+          <p>Welcome to TestingEz</p>
+          <p>Start testing whomever you want <br />on whatever you want!</p>
+          <button type="button" class="btn btn-secondary btn-lg">
+            Sign In
+          </button>
+          <button type="button" class="btn btn-secondary btn-lg">
+            Sign Up
+          </button>
+        </div>
+      </main>
 
       <footer>
         <div class="container-fluid">
