index-page done

--- a/FE/html/index.html
+++ b/FE/html/index.html
@@ -36,10 +36,10 @@
         <div class="main-wrapper">
           <p>Welcome to TestingEz</p>
           <p>Start testing whomever you want <br />on whatever you want!</p>
-          <button type="button" class="btn btn-secondary btn-lg">
+          <button type="button" class="btn btn-secondary btn-lg me-3 px-5">
             Sign In
           </button>
-          <button type="button" class="btn btn-secondary btn-lg">
+          <button type="button" class="btn btn-secondary btn-lg px-5">
             Sign Up
           </button>
         </div>
