sign-up page done

--- a/FE/html/sign-up.html
+++ b/FE/html/sign-up.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Register</title>
+    <title>Sign Up</title>
     <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/register-styles.css" />
     <link
@@ -13,8 +13,12 @@
       crossorigin="anonymous"
     />
   </head>
-  <body class="bg-secondary vh-100 d-flex justify-content-center align-items-center">
-    <div class="container bg-light p-4 border border-black border-2 rounded-3">
+  <body
+    class="bg-secondary vh-100 d-flex justify-content-center align-items-center"
+  >
+    <div
+      class="container bg-light p-4 border border-black border-2 rounded-3 shadow p-3 mb-5 bg-body-tertiary rounded"
+    >
       <div class="row">
         <div class="col-md">
           <label for="username" class="form-label">Username:</label>
@@ -66,9 +70,9 @@
         <div class="col d-flex justify-content-center">
           <button
             type="button"
-            class="btn btn-secondary border border-black border-1"
+            class="btn btn-secondary border border-black border-1 shadow rounded"
           >
-            Register
+            Sign Up
           </button>
         </div>
       </div>
