--- a/FE/html/index.html
+++ b/FE/html/index.html
@@ -36,12 +36,20 @@
         <div class="main-wrapper">
           <p>Welcome to TestingEz</p>
           <p>Start testing whomever you want <br />on whatever you want!</p>
-          <button type="button" class="btn btn-secondary btn-lg me-3 px-5 border border-black border-2">
+          <a
+            href="#"
+            class="btn btn-secondary btn-lg me-3 px-5 border border-black border-2"
+            role="button"
+          >
             Sign In
-          </button>
-          <button type="button" class="btn btn-secondary btn-lg px-5 border border-black border-2">
+          </a>
+          <a
+            href="sign-up.html"
+            class="btn btn-secondary btn-lg px-5 border border-black border-2"
+            role="button"
+          >
             Sign Up
-          </button>
+          </a>
         </div>
       </main>
 
