--- a/FE/html/index.html
+++ b/FE/html/index.html
@@ -5,26 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TestingEz</title>
     <link rel="stylesheet" href="../css/reset.css" />
-    <link rel="stylesheet" href="../css/index-styles.css" />
+    <link rel="stylesheet" href="../css/typography.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <style>
+      p {
+        text-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+      }
+    </style>
   </head>
   <body>
-    <div class="content-wrapper">
-      <header>
-        <nav class="navbar bg-body-secondary">
+    <div class="d-flex flex-column vh-100 bg-secondary">
+      <header class="flex-shrink-0 shadow rounded border-bottom border-black">
+        <nav class="container navbar bg-secondary">
           <div class="container-fluid justify-content-center">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand text-white fs-3" href="#">
               <img
                 src="..\images\school.png"
                 alt="Logo"
-                width="30"
-                height="30"
-                class="d-inline-block align-text-top"
+                width="40"
+                height="40"
+                class="d-inline-block align-text-middle"
               />
               TestingEz</a
             >
@@ -32,20 +37,24 @@
         </nav>
       </header>
 
-      <main>
-        <div class="main-wrapper">
-          <p>Welcome to TestingEz</p>
-          <p>Start testing whomever you want <br />on whatever you want!</p>
+      <main
+        class="d-flex justify-content-center align-items-center flex-grow-1 bg-light text-center"
+      >
+        <div class="container">
+          <p class="m-0 fs-1">Welcome to TestingEz</p>
+          <p class="fs-5">
+            Start testing whomever you want <br />on whatever you want!
+          </p>
           <a
             href="#"
-            class="btn btn-secondary btn-lg me-3 px-5 border border-black border-2"
+            class="btn btn-secondary btn-lg me-3 px-5 border border-black border-2 shadow rounded"
             role="button"
           >
             Sign In
           </a>
           <a
             href="sign-up.html"
-            class="btn btn-secondary btn-lg px-5 border border-black border-2"
+            class="btn btn-secondary btn-lg px-5 border border-black border-2 shadow rounded"
             role="button"
           >
             Sign Up
@@ -53,27 +62,27 @@
         </div>
       </main>
 
-      <footer>
+      <footer class="shadow rounded border-top border-black">
         <div class="container-fluid">
-          <footer class="bg-body-secondary">
-            <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+          <footer class="container bg-secondary">
+            <ul class="nav justify-content-center pb-3 mb-3">
               <li class="nav-item">
-                <a href="#" class="nav-link px-2 text-muted">Home</a>
+                <a href="#" class="nav-link px-2 text-white fs-5">Home</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link px-2 text-muted">Features</a>
+                <a href="#" class="nav-link px-2 text-white fs-5">Features</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link px-2 text-muted">Pricing</a>
+                <a href="#" class="nav-link px-2 text-white fs-5">Pricing</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link px-2 text-muted">FAQs</a>
+                <a href="#" class="nav-link px-2 text-white fs-5">FAQs</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link px-2 text-muted">About</a>
+                <a href="#" class="nav-link px-2 text-white fs-5">About</a>
               </li>
             </ul>
-            <p class="text-center text-muted">© 2024 Company, Inc</p>
+            <p class="text-center text-white fs-5">© 2024 Company, Inc</p>
           </footer>
         </div>
       </footer>
