--- a/FE/html/sign-up.html
+++ b/FE/html/sign-up.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign Up</title>
     <link rel="stylesheet" href="../css/reset.css" />
-    <link rel="stylesheet" href="../css/register-styles.css" />
+    <link rel="stylesheet" href="../css/typography.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,21 +17,24 @@
     class="bg-secondary vh-100 d-flex justify-content-center align-items-center"
   >
     <div
-      class="container bg-light p-4 border border-black border-2 rounded-3 shadow p-3 mb-5 bg-body-tertiary rounded"
+      class="container bg-light p-4 border border-black border-2 rounded-3 shadow p-3 mb-5 bg-body-tertiary rounded fs-5"
     >
+      <div class="row">
+        <div class="col"><h2 class="text-center">Register</h2></div>
+      </div>
       <div class="row">
         <div class="col-md">
           <label for="username" class="form-label">Username:</label>
           <input
             type="text"
-            class="form-control border border-black"
+            class="form-control border border-black fs-6"
             id="username"
           />
           <label for="inputPassword" class="form-label">Password:</label>
           <input
             type="password"
             id="inputPassword"
-            class="form-control border border-black"
+            class="form-control border border-black fs-6"
             aria-describedby="passwordHelpBlock"
           />
         </div>
@@ -39,13 +42,13 @@
           <label for="first-name" class="form-label">First Name:</label>
           <input
             type="text"
-            class="form-control border border-black"
+            class="form-control border border-black fs-6"
             id="first-name"
           />
           <label for="last-name" class="form-label">Last Name:</label>
           <input
             type="text"
-            class="form-control border border-black"
+            class="form-control border border-black fs-6"
             id="last-name"
           />
         </div>
@@ -53,14 +56,14 @@
           <label for="email" class="form-label">Email:</label>
           <input
             type="email"
-            class="form-control border border-black"
+            class="form-control border border-black fs-6"
             id="email"
             placeholder="name@example.com"
           />
           <label for="phone-number" class="form-label">Phone number:</label>
           <input
             type="text"
-            class="form-control mb-3 border border-black"
+            class="form-control mb-3 border border-black fs-6"
             id="phone-number"
             placeholder="+359 XX XXX XXXX"
           />
@@ -70,7 +73,7 @@
         <div class="col d-flex justify-content-center">
           <button
             type="button"
-            class="btn btn-secondary border border-black border-1 shadow rounded"
+            class="btn btn-secondary border border-black border-2 shadow rounded fs-5"
           >
             Sign Up
           </button>
