--- a/FE/html/index.html
+++ b/FE/html/index.html
@@ -46,7 +46,7 @@
             Start testing whomever you want <br />on whatever you want!
           </p>
           <a
-            href="#"
+            href="sign-in.html"
             class="btn btn-secondary btn-lg me-3 px-5 border border-black border-2 shadow rounded"
             role="button"
           >
