--- a/FE/html/user-home-page.html
+++ b/FE/html/user-home-page.html
@@ -16,13 +16,13 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-lg bg-secondary">
-        <div class="container-fluid">
+        <div class="container-fluid gap-1">
           <a class="navbar-brand bg-light rounded shadow px-1 fs-5" href="#">
             <img
               src="..\images\astronaut.png"
               alt="default-avatar"
-              width="40"
-              height="40"
+              width="35"
+              height="35"
               class="d-inline-block align-text-middle"
             />@username</a
           >
@@ -38,14 +38,22 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link bg-light rounded shadow px-3 fs-5" href="#"
+            <div class="navbar-nav justify-content-center gap-1">
+              <a
+                class="nav-link bg-light rounded shadow px-3 fs-5 text-center text-black"
+                href="#"
                 >Join Room</a
               >
-              <a class="nav-link bg-light rounded shadow px-3 fs-5" href="#"
+              <a
+                class="nav-link bg-light rounded shadow px-3 fs-5 text-center text-black"
+                href="#"
                 >Create Room</a
               >
-              <a class="nav-link bg-light rounded shadow px-3 fs-5" href="#"
+            </div>
+            <div class="navbar-nav ms-auto">
+              <a
+                class="nav-link bg-light rounded shadow px-3 fs-5 text-center text-black mt-1 mt-lg-0"
+                href="#"
                 >Log out</a
               >
             </div>
