user-home-page.html done

--- a/FE/html/index.html
+++ b/FE/html/index.html
@@ -18,7 +18,7 @@
       }
     </style>
   </head>
-  <body>
+  <body class="font">
     <div class="d-flex flex-column vh-100 bg-secondary">
       <header class="flex-shrink-0 shadow rounded border-bottom border-black">
         <nav class="container navbar bg-secondary">
