--- a/FE/html/sign-in.html
+++ b/FE/html/sign-in.html
@@ -14,7 +14,7 @@
     />
   </head>
   <body
-    class="bg-secondary vh-100 d-flex justify-content-center align-items-center"
+    class="bg-secondary vh-100 d-flex justify-content-center align-items-center font"
   >
     <div
       class="container d-flex justify-content-center align-items-center vh-100"
