--- a/FE/html/sign-up.html
+++ b/FE/html/sign-up.html
@@ -14,7 +14,7 @@
     />
   </head>
   <body
-    class="bg-secondary vh-100 d-flex justify-content-center align-items-center"
+    class="bg-secondary vh-100 d-flex justify-content-center align-items-center font"
   >
     <div
       class="container bg-light p-4 border border-black border-2 rounded-3 shadow p-3 mb-5 bg-body-tertiary rounded fs-5"
