--- a/FE/html/index.html
+++ b/FE/html/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TestingEz</title>
+    <link rel="icon" type="image/x-icon" href="../images/school.png">
     <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/typography.css" />
     <link
