--- a/FE/html/user-home.html
+++ b/FE/html/user-home.html
@@ -45,12 +45,12 @@
               <div class="navbar-nav justify-content-center gap-1 mt-3 mt-lg-0">
                 <a
                   class="nav-link bg-light rounded shadow px-3 fs-5 text-center text-black border border-black border-2"
-                  href="#"
+                  href="user-home.html"
                   >Join Test</a
                 >
                 <a
                   class="nav-link bg-light rounded shadow px-3 fs-5 text-center text-black border border-black border-2"
-                  href="#"
+                  href="create-test.html"
                   >Create Test</a
                 >
                 <a
