create test form created

--- a/FE/html/user-home.html
+++ b/FE/html/user-home.html
@@ -27,7 +27,7 @@
                 alt="default-avatar"
                 width="35"
                 height="35"
-                class="d-inline-block align-text-middle"
+                class="d-inline-block align-text-middle me-1"
               />@username</a
             >
             <button
@@ -101,7 +101,7 @@
                 type="submit"
                 class="btn bg-light text-black border border-black border-2 shadow rounded fs-5"
               >
-                Join Test
+                join
               </button>
             </form>
           </div>
