--- a/FE/html/create-test.html
+++ b/FE/html/create-test.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Create Test</title>
-    <link rel="icon" type="image/x-icon" href="../images/school.png">
+    <link rel="icon" type="image/x-icon" href="../images/school.png" />
     <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/typography.css" />
     <link
@@ -28,7 +28,7 @@
                 alt="default-avatar"
                 width="35"
                 height="35"
-                class="d-inline-block align-text-middle"
+                class="d-inline-block align-text-middle me-1"
               />@username</a
             >
             <button
@@ -77,9 +77,102 @@
         </nav>
       </header>
 
-      <main
-        class="container d-flex justify-content-center align-items-center flex-grow-1"
-      >
+      <main class="d-flex align-items-center flex-grow-1">
+        <div
+          class="container bg-secondary border border-2 border-black rounded shadow text-white fs-3 p-3"
+        >
+          <h1 class="text-center">Create Test</h1>
+          <div class="row row-cols-1 row-cols-md-2 mb-2">
+            <div class="col">
+              <label for="name" class="form-label fs-3">Test name:</label>
+            </div>
+            <div class="col">
+              <input
+                type="text"
+                class="form-control border border-black fs-4 shadow"
+                id="name"
+              />
+            </div>
+          </div>
+          <div class="row row-cols-1 row-cols-md-2 mb-2">
+            <div class="col">
+              <label for="description" class="form-label fs-3"
+                >Description:</label
+              >
+            </div>
+            <div class="col">
+              <input
+                type="text"
+                class="form-control border border-black fs-4"
+                id="description"
+                placeholder="(optional)"
+              />
+            </div>
+          </div>
+          <div class="row row-cols-1 row-cols-md-2 mb-2">
+            <div class="col">
+              <label for="code" class="form-label fs-3">Code:</label>
+            </div>
+            <div class="col">
+              <input
+                type="text"
+                class="form-control border border-black fs-4"
+                id="code"
+              />
+            </div>
+          </div>
+          <div class="row row-cols-1 row-cols-md-2 mb-2">
+            <div class="col">
+              <label for="time-for-response" class="form-label fs-3"
+                >Time for response:</label
+              >
+            </div>
+            <div class="col">
+              <input
+                type="text"
+                class="form-control border border-black fs-4"
+                id="time-for-response"
+                placeholder="(in minutes)"
+              />
+            </div>
+          </div>
+          <div class="row row-cols-1 row-cols-md-2 mb-2">
+            <div class="col">
+              <label for="questions-count" class="form-label fs-3"
+                >Questions count:</label
+              >
+            </div>
+            <div class="col">
+              <input
+                type="text"
+                class="form-control border border-black fs-4"
+                id="questions-count"
+              />
+            </div>
+          </div>
+          <div class="row row-cols-1 row-cols-md-2 mb-2">
+            <div class="col">
+              <label for="status" class="form-label fs-3">Status:</label>
+            </div>
+            <div class="col">
+              <input
+                type="text"
+                class="form-control border border-black fs-4"
+                id="status"
+                placeholder="(opened/closed)"
+              />
+            </div>
+          </div>
+          <div class="row">
+            <div class="col text-center">
+              <button
+                class="btn bg-light text-black border border-black border-2 shadow rounded fs-3 px-5 mt-3"
+              >
+                next
+              </button>
+            </div>
+          </div>
+        </div>
       </main>
 
       <footer class="shadow border-top border-black bg-secondary">
