--- a/FE/html/create-test.html
+++ b/FE/html/create-test.html
@@ -44,26 +44,27 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav justify-content-center gap-1 mt-3 mt-lg-0">
-                <a
-                  class="nav-link bg-light rounded shadow px-3 fs-5 text-center text-black border border-black border-2"
-                  href="user-home.html"
-                  >Join Test</a
-                >
-                <a
-                  class="nav-link bg-light rounded shadow px-3 fs-5 text-center text-black border border-black border-2"
-                  href="create-test.html"
-                  >Create Test</a
-                >
-                <a
-                  class="nav-link bg-light rounded shadow px-3 fs-5 text-center text-black border border-black border-2"
-                  href="#"
-                  >My Tests</a
-                >
-                <a
-                  class="nav-link bg-light rounded shadow px-3 fs-5 text-center text-black border border-black border-2"
-                  href="#"
-                  >My Results</a
-                >
+                <ul class="nav nav-underline">
+                  <li class="nav-item">
+                    <a class="nav-link fs-5 link-light" href="user-home.html"
+                      >Join Test</a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a
+                      class="nav-link fs-5 active link-light"
+                      aria-current="page"
+                      href="create-test.html"
+                      >Create Test</a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link fs-5 link-light" href="#">My Tests</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link fs-5 link-light" href="#">My Results</a>
+                  </li>
+                </ul>
               </div>
               <div class="navbar-nav ms-auto">
                 <a
@@ -79,31 +80,29 @@
 
       <main class="d-flex align-items-center flex-grow-1">
         <div
-          class="container bg-secondary border border-2 border-black rounded shadow text-white fs-3 p-3"
+          class="container bg-secondary border border-2 border-black rounded shadow text-white fs-4 p-3"
         >
           <h1 class="text-center">Create Test</h1>
           <div class="row row-cols-1 row-cols-md-2 mb-2">
             <div class="col">
-              <label for="name" class="form-label fs-3">Test name:</label>
+              <label for="name" class="form-label">Test name:</label>
             </div>
             <div class="col">
               <input
                 type="text"
-                class="form-control border border-black fs-4 shadow"
+                class="form-control border border-black shadow fs-5"
                 id="name"
               />
             </div>
           </div>
           <div class="row row-cols-1 row-cols-md-2 mb-2">
             <div class="col">
-              <label for="description" class="form-label fs-3"
-                >Description:</label
-              >
+              <label for="description" class="form-label">Description:</label>
             </div>
             <div class="col">
               <input
                 type="text"
-                class="form-control border border-black fs-4"
+                class="form-control border border-black fs-5"
                 id="description"
                 placeholder="(optional)"
               />
@@ -111,26 +110,26 @@
           </div>
           <div class="row row-cols-1 row-cols-md-2 mb-2">
             <div class="col">
-              <label for="code" class="form-label fs-3">Code:</label>
+              <label for="code" class="form-label">Code:</label>
             </div>
             <div class="col">
               <input
                 type="text"
-                class="form-control border border-black fs-4"
+                class="form-control border border-black fs-5"
                 id="code"
               />
             </div>
           </div>
           <div class="row row-cols-1 row-cols-md-2 mb-2">
             <div class="col">
-              <label for="time-for-response" class="form-label fs-3"
+              <label for="time-for-response" class="form-label"
                 >Time for response:</label
               >
             </div>
             <div class="col">
               <input
                 type="text"
-                class="form-control border border-black fs-4"
+                class="form-control border border-black fs-5"
                 id="time-for-response"
                 placeholder="(in minutes)"
               />
@@ -138,26 +137,26 @@
           </div>
           <div class="row row-cols-1 row-cols-md-2 mb-2">
             <div class="col">
-              <label for="questions-count" class="form-label fs-3"
+              <label for="questions-count" class="form-label"
                 >Questions count:</label
               >
             </div>
             <div class="col">
               <input
                 type="text"
-                class="form-control border border-black fs-4"
+                class="form-control border border-black fs-5"
                 id="questions-count"
               />
             </div>
           </div>
           <div class="row row-cols-1 row-cols-md-2 mb-2">
             <div class="col">
-              <label for="status" class="form-label fs-3">Status:</label>
+              <label for="status" class="form-label">Status:</label>
             </div>
             <div class="col">
               <input
                 type="text"
-                class="form-control border border-black fs-4"
+                class="form-control border border-black fs-5"
                 id="status"
                 placeholder="(opened/closed)"
               />
@@ -166,7 +165,7 @@
           <div class="row">
             <div class="col text-center">
               <button
-                class="btn bg-light text-black border border-black border-2 shadow rounded fs-3 px-5 mt-3"
+                class="btn bg-light text-black border border-black border-2 shadow rounded fs-5 px-5 mt-3"
               >
                 next
               </button>
