header links design simplified

--- a/FE/html/create-test.html
+++ b/FE/html/create-test.html
@@ -45,24 +45,21 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav justify-content-center gap-1 mt-3 mt-lg-0">
                 <a
-                  class="nav-link bg-light rounded shadow px-3 fs-5 text-center text-black border border-black border-2"
+                  class="nav-link text-center fs-5 link-light"
                   href="user-home.html"
                   >Join Test</a
                 >
                 <a
-                  class="nav-link bg-light rounded shadow px-3 fs-5 text-center text-black border border-black border-2"
+                  class="nav-link text-center fs-5 link-light active"
+                  aria-current="page"
                   href="create-test.html"
                   >Create Test</a
                 >
-                <a
-                  class="nav-link bg-light rounded shadow px-3 fs-5 text-center text-black border border-black border-2"
-                  href="#"
-                  >My Tests</a
-                >
-                <a
-                  class="nav-link bg-light rounded shadow px-3 fs-5 text-center text-black border border-black border-2"
-                  href="#"
+                <a class="nav-link text-center fs-5 link-light" href="#"
                   >My Results</a
+                >
+                <a class="nav-link text-center fs-5 link-light" href="#"
+                  >My Tests</a
                 >
               </div>
               <div class="navbar-nav ms-auto">
