--- a/FE/html/user-home.html
+++ b/FE/html/user-home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
+    <link rel="icon" type="image/x-icon" href="../images/school.png" />
     <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/typography.css" />
     <link
@@ -27,7 +28,7 @@
                 alt="default-avatar"
                 width="35"
                 height="35"
-                class="d-inline-block align-text-middle"
+                class="d-inline-block align-text-middle me-1"
               />@username</a
             >
             <button
@@ -44,24 +45,21 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav justify-content-center gap-1 mt-3 mt-lg-0">
                 <a
-                  class="nav-link bg-light rounded shadow px-3 fs-5 text-center text-black border border-black border-2"
-                  href="#"
+                  class="nav-link text-center fs-5 link-light active"
+                  aria-current="page"
+                  href="user-home.html"
                   >Join Test</a
                 >
                 <a
-                  class="nav-link bg-light rounded shadow px-3 fs-5 text-center text-black border border-black border-2"
-                  href="#"
+                  class="nav-link text-center fs-5 link-light"
+                  href="create-test.html"
                   >Create Test</a
                 >
-                <a
-                  class="nav-link bg-light rounded shadow px-3 fs-5 text-center text-black border border-black border-2"
-                  href="#"
-                  >My Tests</a
-                >
-                <a
-                  class="nav-link bg-light rounded shadow px-3 fs-5 text-center text-black border border-black border-2"
-                  href="#"
+                <a class="nav-link text-center fs-5 link-light" href="#"
                   >My Results</a
+                >
+                <a class="nav-link text-center fs-5 link-light" href="#"
+                  >My Tests</a
                 >
               </div>
               <div class="navbar-nav ms-auto">
@@ -101,7 +99,7 @@
                 type="submit"
                 class="btn bg-light text-black border border-black border-2 shadow rounded fs-5"
               >
-                Join Test
+                join
               </button>
             </form>
           </div>
