User home page and create test page done (#7)
* Index page done (#1)

* base classes created

* header and footer added

* attept to align the items of the header properly

* successfully positioned buttons on header

* index-page redesigned

* index-page done

* borders added to buttons of index-page

* Register page done (#2)

* register-page done

* sign-up page done

* sign in and sign up buttons on index.html are links now

* deleted useless css classes and added typography.css

* sign-in page added (#3)

* user-home-page.html done (#5)

* trying to make the header responsive

* header done

* test entrance, test history and footer added, sort of responsive

* user-home-page.html done

* Create test page (#6)

* user-home-page.html renamed to user-home.html, icon added to all htmls and create-test.html created

* create test form created

* new navbar links design

* header links design simplified

--- a/FE/html/index.html
+++ b/FE/html/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TestingEz</title>
+    <link rel="icon" type="image/x-icon" href="../images/school.png">
     <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/typography.css" />
     <link
@@ -18,7 +19,7 @@
       }
     </style>
   </head>
-  <body>
+  <body class="font">
     <div class="d-flex flex-column vh-100 bg-secondary">
       <header class="flex-shrink-0 shadow rounded border-bottom border-black">
         <nav class="container navbar bg-secondary">
