--- a/FE/html/sign-up.html
+++ b/FE/html/sign-up.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign Up</title>
+    <link rel="icon" type="image/x-icon" href="../images/school.png">
     <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/typography.css" />
     <link
@@ -14,7 +15,7 @@
     />
   </head>
   <body
-    class="bg-secondary vh-100 d-flex justify-content-center align-items-center"
+    class="bg-secondary vh-100 d-flex justify-content-center align-items-center font"
   >
     <div
       class="container bg-light p-4 border border-black border-2 rounded-3 shadow p-3 mb-5 bg-body-tertiary rounded fs-5"
